Say which kernel a call to the standard library reaches
A call to a standard-library operation carried the name it was reached by and
nothing of what is behind it, so the JVM emitter went back to this compiler's
own registry for the declaration and read its body to find the kernel. An output
outside souther-compiler can reach neither, and held a call it could see and
could not place.

Kernel is what the language names, one constant per operation the library
declares as `intrinsic "..."`. A written key becomes one where the library is
frozen and nowhere else, so a key naming no kernel is refused while the library
is built rather than where some program calls it, and a kernel declared twice is
refused there too — a backend derives its boundary form from the signature the
kernel holds, which is one answer.

Core.Reached is a sum now: a call to a kernel says which kernel, beside the name
it was reached by and what that name denotes. Under Reached rather than beside
it, because a kernel call is reached — a reader asking what a call reaches asks
one type whichever arm it is, and only a reader that emits the operation goes on
to ask which kernel. The convenience constructor taking a reach name is gone, so
CallElaborator's factory is the only way a call to a name is built.

CallElaborator, BodyGen and codegen.Intrinsics turn on the kernel now, where
they compared a rendered reach name or a key. EveryKernelIsDeclaredTest holds
the three sets as one: the kernels this compiler names, the kernels the library
declares, and what the JVM's table emits together with what BodyGen writes out.

Closes #1088